--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,5 +1,5 @@
 	<div id="search" class="dropdown form-inline">
-		<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-secondary w-100" placeholder="Find student" aria-label="Find student">
+		<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-light w-100" placeholder="Find student" aria-label="Find student">
 		<div id="search-results" class="dropdown-menu"></div>
 	</div>
 	<script>
