--- a/app/views/schedules/schedules/_tabs.html.erb
+++ b/app/views/schedules/schedules/_tabs.html.erb
@@ -1,6 +1,6 @@
 <% content_for :navbar_items do %>
 
-<div id="schedule-navbar-items" class="d-flex navbar">
+<div id="schedule-navbar-items" class="d-flex ml-3">
 
 	<% if @accessible_schedules.size > 1 %>
 	<div class="dropdown">
