--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,6 +32,7 @@ $color5: #F25D50;
 @import "includes/modal";
 
 @import "includes/theme";
+@import "includes/fonts";
 @import "includes/tweaks";
 @import "includes/print";
 
