--- a/app/views/application/_float_nav.html.erb
+++ b/app/views/application/_float_nav.html.erb
@@ -1,7 +1,8 @@
 <ul id="icon-nav" class="navbar-nav ml-auto">
 	<% if Settings.hands_allow && current_user.valid_profile? %>
 	<li class="nav-item dropdown" id="ama-nav">
-		<a href="#" id="ama-dd" class="bg-white rounded-pill p-2 dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= icon "people-fill", size: '24x24', style: 'vertical-align:-6px;' %><%= Hand.waiting.count if current_user.staff? %></a>
+		<a href="#" id="ama-dd" class="bg-light rounded-pill p-2 dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+			<%= icon "question-fill", size: '24x24', style: 'vertical-align:-6px;' %><%= Hand.waiting.count if current_user.staff? %></a>
 		<div class="dropdown-menu dropdown-menu-right" id="ama-menu">
 			<%= render 'ama' %>
 		</div>
@@ -9,7 +10,7 @@
 	<% end %>
 
 	<% if !authenticated? %>
-	<li><%= link_to("Sign in".html_safe, session_login_path)%></li>
+	<li><%= link_to("Sign in".html_safe, session_login_path, class:"bg-light rounded-pill p-2 ")%></li>
 	<% elsif logged_in? %>
 	<%= render 'menu' %>
 	<% end %>
