--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -8,7 +8,9 @@
 		        </button>
 			</div>
 			<div id="modal-browser-body" class="modal-body">
-				<p style="text-align:center; font-size:xx-large"><%= icon 'hammer', size: '64x64' %></p>
+				<div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+				  <span class="sr-only">Loading...</span>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -18,6 +20,6 @@
 	$('#modal-browser').on('show.bs.modal', function (e) {
 		// clear modal upon load
 		$('#modal-browser-title').html('');
-		$('#modal-browser-body').html('<p style="text-align:center; font-size:xx-large"><%= icon "hammer", size: '64x64' %></p>');
+		$('#modal-browser-body').html('<div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status"><span class="sr-only">Loading...</span></div>');
 	})
 </script>
