--- a/app/views/application/_sections.html.erb
+++ b/app/views/application/_sections.html.erb
@@ -2,7 +2,7 @@
 
 <li class="nav-item dropdown hidden-xs">
 	<a href="#collapse-<%= section.title.parameterize %>" class="nav-link dropdoswn-toggle" data-toggle="collapse" role="button" aria-haspopup="true" aria-expanded="false">
-		<%= icon 'chevron-right', class: 'd-none d-md-inline-block', style: 'vertical-align: -3px; height: 1rem; width: 1.3rem; margin-left:-1.3rem; color: #D4DAE0' %><%= section.title %>
+		<%= icon 'chevron-right', class: 'chevron d-none d-lg-inline-block' %><%= section.title %>
 	</a>
 	<ul class="nav collapse" id="collapse-<%= section.title.parameterize %>">
 		<% for page in section.pages %>
