--- a/app/views/home/announcements.html.erb
+++ b/app/views/home/announcements.html.erb
@@ -1,5 +1,5 @@
-<div id="timeline" class="row">
-	<div class="col">
+<div id="timeline" class="mx-n3 mx-sm-n4 mx-md-0">
+	<!-- <div class="col"> -->
 		<%= render partial: 'alert', collection: @alerts %>
-	</div>
+	<!-- </div> -->
 </div>
