--- a/app/views/home/submissions.html.erb
+++ b/app/views/home/submissions.html.erb
@@ -1,10 +1,10 @@
 <% if @overview_config.present? %>
 
 <div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col-12 col-xl-6">
+	<div class="col-12 col-xl-6 px-0 px-md-3">
 		<%= render partial: "grades_overview" %>
 	</div>
-	<div class="col-xl-6">
+	<div class="col-xl-6 px-0 px-md-3">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
@@ -12,7 +12,7 @@
 <% else %>
 
 <div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col-lg-12">
+	<div class="col mx-0 mx-md-3">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
