--- a/app/views/layouts/schedules.html.erb
+++ b/app/views/layouts/schedules.html.erb
@@ -21,8 +21,11 @@
 
 	<div class="d-flex flex-column h-100">
 
-		<div id="navbar" class="navbar sticky-top bg-dark navbar-dark navbar-expand-lg flex-shrink-0">
-			<%= render 'brand' %>
+		<div id="navbar" class="navbar bg-dark navbar-dark navbar-expand-lg flex-shrink-0">
+			<div class="brand">
+				<%= render 'brand' %>
+			</div>
+			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
