--- a/app/views/layouts/schedules.html.erb
+++ b/app/views/layouts/schedules.html.erb
@@ -26,13 +26,12 @@
 				<%= render 'brand' %>
 			</div>
 			
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
+			<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-			</button>
+			</button> -->
 			
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<div class="collapse show navbar-collapse" id="navbarSupportedContent">
 				<%= yield :navbar_items %>
-				<%= render 'float_nav' %>
 			</div>
 		</div>
 
