--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -1,9 +1,9 @@
 <% if current_user.admin? %>
 
 <% if Schedule.many? %>
-<h6 class="dropdown-header">Schedules</h6>
+<h6 class="dropdown-header">Your schedules</h6>
 <% Schedule.all.each do |s| %>
-<%= menu_link_to "Switch to #{s.name}", 'list-ol', user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), context, method: :post %>
+<%= menu_link_to "Switch to #{s.name}", (s==@current_schedule ? 'check' : nil), user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), context, method: :post %>
 <% end %>
 <div class="dropdown-divider"></div>
 <% end %>
@@ -17,12 +17,15 @@
 <% if Settings.tests_present %>
 <%= menu_link_to 'Tests...', 'check', tests_path, context, remote: true %>
 <% end %>
+<% if !current_user.schedule.self_service %>
+<%= menu_link_to 'Set module...', 'calendar', edit_schedule_current_module_path(@current_schedule), context, remote: true %>
+<% end %>
 <div class="dropdown-divider d-none d-md-block"></div>
 <h6 class="dropdown-header">Course</h6>
 <%= menu_link_to 'Course administration...', 'inboxes', admin_course_path, context, remote: true %>
 <%= menu_link_to 'Site configuration...', 'wrench', admin_site_path, context, remote: true %>
 <%= menu_link_to 'Edit permissions...', 'unlock', admin_users_path, context, remote: true %>
-<%= menu_link_to 'Update courseware...', 'download', admin_update_path, context, method: :post %>
+<%= menu_link_to 'Update courseware', 'download', admin_update_path, context, method: :post %>
 <div class="dropdown-divider d-none d-md-block"></div>
 
 
