--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -1,60 +1,61 @@
 <% if current_user.admin? %>
 
-<% if Schedule.many? %>
-<h6 class="dropdown-header">Your schedules</h6>
-<% Schedule.all.each do |s| %>
-<%= menu_link_to "Switch to #{s.name}", (s==@current_schedule ? 'check' : nil), user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), context, method: :post %>
-<% end %>
-<div class="dropdown-divider"></div>
-<% end %>
-<h6 class="dropdown-header"><%= @current_schedule.name if @current_schedule %></h6>
-<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
-<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
-<% if Settings.hands_allow %>
-<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
-<% end %>
-<%= menu_link_to 'Announcements...', 'bell-fill', alerts_path, context, remote: true %>
-<% if Settings.tests_present %>
-<%= menu_link_to 'Tests...', 'check', tests_path, context, remote: true %>
-<% end %>
-<% if !current_user.schedule.self_service %>
-<%= menu_link_to 'Set module...', 'calendar', edit_schedule_current_module_path(@current_schedule), context, remote: true %>
-<% end %>
-<div class="dropdown-divider d-none d-md-block"></div>
-<h6 class="dropdown-header">Course</h6>
-<%= menu_link_to 'Course administration...', 'inboxes', admin_course_path, context, remote: true %>
-<%= menu_link_to 'Site configuration...', 'wrench', admin_site_path, context, remote: true %>
-<%= menu_link_to 'Edit permissions...', 'unlock', admin_users_path, context, remote: true %>
-<%= menu_link_to 'Update courseware', 'download', admin_update_path, context, method: :post %>
-<div class="dropdown-divider d-none d-md-block"></div>
+	<h6 class="dropdown-header pl-0 pl-md-4"><%= @current_schedule.name if @current_schedule %></h6>
+		<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
+		<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
+		<% if Settings.hands_allow %>
+		<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
+		<% end %>
+		<%= menu_link_to 'Announcements...', 'bell-fill', alerts_path, context, remote: true %>
+		<% if Settings.tests_present %>
+		<%= menu_link_to 'Tests...', 'check', tests_path, context, remote: true %>
+		<% end %>
+		<% if !current_user.schedule.self_service %>
+		<%= menu_link_to 'Set module...', 'calendar', edit_schedule_current_module_path(@current_schedule), context, remote: true %>
+		<% end %>
+	<div class="dropdown-divider d-none d-md-block"></div>
+
+
+	<% if current_user.accessible_schedules.many? %>
+	<h6 class="dropdown-header pl-0 pl-md-4">Your schedules</h6>
+		<% Schedule.all.each do |s| %>
+		<%= menu_link_to s.name, (s==@current_schedule ? 'check' : nil), user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), context, method: :post %>
+		<% end %>
+	<div class="dropdown-divider d-none d-md-block"></div>
+	<% end %>
+
+
+	<h6 class="dropdown-header pl-0 pl-md-4">Course</h6>
+		<%= menu_link_to 'Course administration...', 'inboxes', admin_course_path, context, remote: true %>
+		<%= menu_link_to 'Site configuration...', 'wrench', admin_site_path, context, remote: true %>
+		<%= menu_link_to 'Edit permissions...', 'unlock', admin_users_path, context, remote: true %>
+		<%= menu_link_to 'Update courseware', 'download', admin_update_path, context, method: :post %>
 
 
 
 <% elsif current_user.head? %>
 
-<% if Settings.hands_allow %>
-<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
-<% end %>
-<% if Settings.tests_present %>
-<%= menu_link_to 'Tests...', 'check', tests_path, context, remote: true %>
-<% end %>
-<div class="dropdown-divider d-none d-md-block"></div>
-<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
-<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
-<div class="dropdown-divider d-none d-md-block"></div>
+	<% if Settings.hands_allow %>
+	<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
+	<% end %>
+	<% if Settings.tests_present %>
+	<%= menu_link_to 'Tests...', 'check', tests_path, context, remote: true %>
+	<% end %>
+	<div class="dropdown-divider d-none d-md-block"></div>
+	<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
+	<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
 
 
 
 <% elsif current_user.assistant? %>
 
-<% if Settings.hands_allow %>
-<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
-<% end %>
-<% if !Schedule.exists? or current_user.groups.any? or current_user.schedules.any? %>
-<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
-<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
-<% end %>
-<div class="dropdown-divider d-none d-md-block"></div>
+	<% if Settings.hands_allow %>
+	<%= menu_link_to 'Hands', 'people-fill', hands_path, context %>
+	<% end %>
+	<% if !Schedule.exists? or current_user.groups.any? or current_user.schedules.any? %>
+	<%= menu_link_to 'Overview', 'columns', schedule_overview_path, context %>
+	<%= menu_link_to 'Grading', 'pen', grading_index_path, context %>
+	<% end %>
 
 
 
@@ -65,4 +66,5 @@
 <% end%>
 
 
+<div class="dropdown-divider d-none d-md-block"></div>
 <%= menu_link_to 'Logout', 'box-arrow-right', session_logout_path, context %>
