titleize submit names, especially for things like 'test a'

--- a/app/views/home/_grades_overview.html.erb
+++ b/app/views/home/_grades_overview.html.erb
@@ -22,7 +22,7 @@
 					<%# Each submit within category %>
 					<tr>
 						<%# Submit name %>
-						<th><%= humanize_submit(submit) %></th>
+						<th><%= formatted_submit_name(submit) %></th>
 						<% definition['subgrades'].each do |subgrade| %>
 							<%# Print each subgrade if it exists for this grade, subgrades are not hidden, and the grade isn't unpublished. %>
 							<%# Else, print a dash. %>
