initial refactoring of submitting

--- a/app/views/grades/_summary.html.erb
+++ b/app/views/grades/_summary.html.erb
@@ -2,5 +2,5 @@
 	<span class="badge badge-secondary pull-right"><%= @grade.status %></span>
 	Grading <%= t(:by) %> <%= @grade.grader_name %> / 
 	First graded <%= @submit.first_graded %> /
-	Last graded <%= @submit.last_graded %>
+	Last changed <%= @submit.last_graded %>
 </p>
