move components into features folder

--- a/app/views/admin/site/_dropbox.html.erb
+++ b/app/views/admin/site/_dropbox.html.erb
@@ -8,4 +8,4 @@
 	<% end %>
 </p>
 
-<%= change_setting_form('dropbox_folder_name', 'Dropbox folder name to save submissions to (/Dropbox/Submits/[name])') %>
+<%= change_setting_form('dropbox_course_folder', 'Dropbox folder name to save submissions to (/Dropbox/Submits/[name])') %>
