--- a/app/views/schedules/schedules/_tabs.html.erb
+++ b/app/views/schedules/schedules/_tabs.html.erb
@@ -42,7 +42,7 @@
 				<%= link_to 'Notify students who did not submit yet'.html_safe, form_for_missing_schedule_submits_path(schedule_id: @current_module_id), class:"dropdown-item", remote: true  %>
 				<% end %>
 				<% end %>
-				<% if current_user.admin? && FinalGradeAssigner.available? %>
+				<% if current_user.admin? && Grading::FinalGradeAssigner.available? %>
 				<div class="dropdown-divider"></div>
 				<%= link_to 'Calculate final grades'.html_safe, assign_all_final_schedule_grades_path(schedule_id: @current_module_id), method: :put, data: { confirm:'Are you sure?' }, class:"dropdown-item"  %>
 				<% end %>
