--- a/app/views/application/_materials.html.erb
+++ b/app/views/application/_materials.html.erb
@@ -1,6 +1,6 @@
 <% first_done = false %>
 
-<% for section in @sections %>
+<% for section in current_sections %>
 <% if first_done %>
 <div class="dropdown-divider"></div>
 <% else
