--- a/app/views/application/_sections.html.erb
+++ b/app/views/application/_sections.html.erb
@@ -1,4 +1,4 @@
-<% for section in @sections %>
+<% for section in current_sections %>
 
 <li class="nav-item dropdown hidden-xs">
 	<a href="#collapse-<%= section.title.parameterize %>" class="nav-link dropdoswn-toggle" data-toggle="collapse" role="button" aria-haspopup="true" aria-expanded="false">
