simplify menu thing

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -237,3 +237,13 @@
         position: fixed;
     }
 }
+
+#user-menu a
+{
+	@extend .dropdown-item;
+}
+
+#user-menu-sidebar a
+{
+	@extend .nav-link;
+}
