--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -19,7 +19,7 @@ URL: <%= link_to submit.url, submit.url %>
 <% end %>
 
 <div id="fb-modal" class="fade modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">Automatic feedback</h5>
